--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
         "cross-env": "^5.1",
         "jquery": "^3.2",
         "laravel-mix": "^4.0.7",
+        "less": "^3.10.3",
+        "less-loader": "^5.0.0",
         "lodash": "^4.17.13",
         "popper.js": "^1.12",
         "resolve-url-loader": "2.3.1",
