conditional redereing is added including data passing through components. Api calling is next task to be done, i mean data fetching from database using API.

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "vue-template-compiler": "^2.6.10"
     },
     "dependencies": {
+        "bootstrap-vue": "^2.0.2",
         "vue-resource": "^1.5.1",
         "vue-select": "^3.2.0"
     }
