--- a/package.json
+++ b/package.json
@@ -23,11 +23,16 @@
         "sass": "^1.20.1",
         "sass-loader": "7.*",
         "vue": "^2.5.17",
+        "vue-axios": "^2.1.5",
+        "vue-loader": "^15.7.1",
+        "vue-router": "^3.1.3",
         "vue-template-compiler": "^2.6.10"
     },
     "dependencies": {
         "bootstrap-vue": "^2.0.2",
+        "laravel-vue-pagination": "^2.3.1",
         "vue-resource": "^1.5.1",
-        "vue-select": "^3.2.0"
+        "vue-select": "^3.2.0",
+        "vuejs-paginator": "^2.0.2"
     }
 }
