Request lists view for logged in users according to their blood group and their districts has been developed. Donators view also updated. Auto login modal has been added and login modal also changed.

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "laravel-vue-pagination": "^2.3.1",
         "vue-resource": "^1.5.1",
         "vue-select": "^3.2.0",
+        "vue-session": "^1.0.0",
         "vuejs-paginator": "^2.0.2"
     }
 }
