--- a/composer.json
+++ b/composer.json
@@ -10,10 +10,12 @@
     "require": {
         "php": "^7.2",
         "fideloper/proxy": "^4.0",
+        "guzzlehttp/guzzle": "^6.3",
+        "illuminate/support": "^5.0|^6.0",
         "laracasts/utilities": "^3.0",
         "laravel/framework": "^6.0",
-        "laravel/tinker": "^1.0",
-        "illuminate/support": "^5.0|^6.0"
+        "laravel/passport": "^7.5",
+        "laravel/tinker": "^1.0"
     },
     "require-dev": {
         "facade/ignition": "^1.4",
