--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "dependencies": {
         "bootstrap-vue": "^2.0.2",
         "laravel-vue-pagination": "^2.3.1",
+        "vue-js-popover": "^1.1.8",
         "vue-resource": "^1.5.1",
         "vue-select": "^3.2.0",
         "vue-session": "^1.0.0",
