--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "bootstrap-vue": "^2.0.2",
         "laravel-vue-pagination": "^2.3.1",
         "sweetalert": "^2.1.2",
+        "sweetalert2": "^8.18.7",
         "vue-js-popover": "^1.1.8",
         "vue-resource": "^1.5.1",
         "vue-select": "^3.2.0",
