--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "laracasts/utilities": "^3.0",
         "laravel/framework": "^6.0",
         "laravel/passport": "^7.5",
-        "laravel/tinker": "^1.0"
+        "laravel/tinker": "^1.0",
+        "pusher/pusher-php-server": "~4.0"
     },
     "require-dev": {
         "facade/ignition": "^1.4",
