--- a/package.json
+++ b/package.json
@@ -30,13 +30,16 @@
     },
     "dependencies": {
         "bootstrap-vue": "^2.0.2",
+        "laravel-echo": "^1.6.1",
         "laravel-vue-pagination": "^2.3.1",
+        "pusher-js": "^5.0.3",
         "sweetalert": "^2.1.2",
         "sweetalert2": "^8.18.7",
         "vue-js-popover": "^1.1.8",
         "vue-resource": "^1.5.1",
         "vue-select": "^3.2.0",
         "vue-session": "^1.0.0",
+        "vuejs-noty": "^0.1.3",
         "vuejs-paginator": "^2.0.2"
     }
 }
