--- a/package.json
+++ b/package.json
@@ -11,31 +11,32 @@
     },
     "devDependencies": {
         "axios": "^0.19.0",
-        "bootstrap": "^4.0.0",
+        "bootstrap": "^4.4.1",
         "cross-env": "^5.1",
         "jquery": "^3.2",
         "laravel-mix": "^4.0.7",
         "less": "^3.10.3",
         "less-loader": "^5.0.0",
         "lodash": "^4.17.13",
-        "popper.js": "^1.12",
+        "popper.js": "^1.16.0",
         "resolve-url-loader": "2.3.1",
-        "sass": "^1.20.1",
+        "sass": "^1.23.7",
         "sass-loader": "7.*",
         "vue": "^2.5.17",
         "vue-axios": "^2.1.5",
-        "vue-loader": "^15.7.1",
+        "vue-loader": "^15.7.2",
         "vue-router": "^3.1.3",
         "vue-template-compiler": "^2.6.10"
     },
     "dependencies": {
-        "bootstrap-vue": "^2.0.2",
+        "bootstrap-vue": "^2.1.0",
         "laravel-echo": "^1.6.1",
         "laravel-vue-pagination": "^2.3.1",
         "pusher-js": "^5.0.3",
         "sweetalert": "^2.1.2",
-        "sweetalert2": "^8.18.7",
+        "sweetalert2": "^8.19.0",
         "vue-js-popover": "^1.1.8",
+        "vue-progressbar": "^0.7.5",
         "vue-resource": "^1.5.1",
         "vue-select": "^3.2.0",
         "vue-session": "^1.0.0",
