--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "laracasts/utilities": "^3.0",
         "laravel/framework": "^6.0",
         "laravel/passport": "^7.5",
+        "laravel/socialite": "^4.3",
         "laravel/tinker": "^1.0",
         "pusher/pusher-php-server": "~4.0",
         "twbs/bootstrap": "4.3.1"
