In profile section vue is used to provide user  personal detail information modifying ability.  In backend a new controller is being used to do it. And some new vue components have been declared.

--- a/package.json
+++ b/package.json
@@ -22,24 +22,32 @@
         "resolve-url-loader": "2.3.1",
         "sass": "^1.23.7",
         "sass-loader": "7.*",
-        "vue": "^2.5.17",
+        "vue": "^2.6.11",
         "vue-axios": "^2.1.5",
-        "vue-loader": "^15.7.2",
+        "vue-loader": "^15.8.1",
         "vue-router": "^3.1.3",
-        "vue-template-compiler": "^2.6.10"
+        "vue-template-compiler": "^2.6.11"
     },
     "dependencies": {
+        "@syncfusion/ej2-vue-grids": "^17.3.34",
         "bootstrap-vue": "^2.1.0",
+        "date-fns": "^2.8.1",
         "laravel-echo": "^1.6.1",
         "laravel-vue-pagination": "^2.3.1",
+        "portal-vue": "^2.1.6",
         "pusher-js": "^5.0.3",
         "sweetalert": "^2.1.2",
         "sweetalert2": "^8.19.0",
+        "vue-date": "^1.2.0",
+        "vue-date-pick": "^1.2.1",
+        "vue-jquery": "^1.0.6",
         "vue-js-popover": "^1.1.8",
+        "vue-moment": "^4.0.0",
         "vue-progressbar": "^0.7.5",
         "vue-resource": "^1.5.1",
-        "vue-select": "^3.2.0",
+        "vue-select": "^3.4.0",
         "vue-session": "^1.0.0",
+        "vuejs-datepicker": "^1.6.2",
         "vuejs-noty": "^0.1.3",
         "vuejs-paginator": "^2.0.2"
     }
