--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,9 @@
         "laravel/socialite": "^4.3",
         "laravel/tinker": "^1.0",
         "pusher/pusher-php-server": "~4.0",
-        "twbs/bootstrap": "4.3.1"
+        "sarfraznawaz2005/visitlog": "^1.3",
+        "twbs/bootstrap": "4.3.1",
+        "ybr-nx/laravel-mariadb": "^1.0"
     },
     "require-dev": {
         "facade/ignition": "^1.4",
