--- a/package.json
+++ b/package.json
@@ -20,16 +20,16 @@
         "lodash": "^4.17.13",
         "popper.js": "^1.16.0",
         "resolve-url-loader": "2.3.1",
-        "sass": "^1.23.7",
+        "sass": "^1.24.0",
         "sass-loader": "7.*",
         "vue": "^2.6.11",
         "vue-axios": "^2.1.5",
-        "vue-loader": "^15.8.1",
+        "vue-loader": "^15.8.3",
         "vue-router": "^3.1.3",
         "vue-template-compiler": "^2.6.11"
     },
     "dependencies": {
-        "@syncfusion/ej2-vue-grids": "^17.3.34",
+        "@syncfusion/ej2-vue-grids": "^17.4.40",
         "bootstrap-vue": "^2.1.0",
         "date-fns": "^2.8.1",
         "laravel-echo": "^1.6.1",
@@ -40,15 +40,18 @@
         "sweetalert2": "^8.19.0",
         "vue-date": "^1.2.0",
         "vue-date-pick": "^1.2.1",
+        "vue-dialog-loading": "^0.4.0",
         "vue-jquery": "^1.0.6",
         "vue-js-popover": "^1.1.8",
-        "vue-moment": "^4.0.0",
+        "vue-moment": "^4.1.0",
         "vue-progressbar": "^0.7.5",
+        "vue-quick-chat": "^1.0.8",
         "vue-resource": "^1.5.1",
         "vue-select": "^3.4.0",
         "vue-session": "^1.0.0",
         "vuejs-datepicker": "^1.6.2",
         "vuejs-noty": "^0.1.3",
-        "vuejs-paginator": "^2.0.2"
+        "vuejs-paginator": "^2.0.2",
+        "vuex": "^3.1.2"
     }
 }
